--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -9,15 +9,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.8
+    - name: Set up Python 3.7
       uses: actions/setup-python@v1
       with:
-        python-version: 3.8
+        python-version: 3.7
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        
-       # pip install -r requirements.txt
     - name: Lint with flake8
       run: |
         pip install flake8
@@ -29,9 +27,12 @@ jobs:
       run: |
         pip install black
         black .
+    - name: Build Docs
+      run: |
+        cd docs/ && make html
     - name: Archive production artifacts
       uses: actions/upload-artifact@v1
       with:
-        name: dist
-        path: dist
+        name: docs/_build/
+        path: docs/_build/
       
