--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -29,6 +29,7 @@ jobs:
         black .
     - name: Build Docs
       run: |
+        pip install sphinx
         cd docs/ && make html
     - name: Archive production artifacts
       uses: actions/upload-artifact@v1
