--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -34,6 +34,6 @@ jobs:
     - name: Archive production artifacts
       uses: actions/upload-artifact@v1
       with:
-        name: docs/_build/
+        name: html
         path: docs/_build/
       
